@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-06-11T12:38:28Z",
+  "timestamp" : "2024-06-12T01:26:06Z",
   "count_outdated" : 3896,
   "uniques_outdated" : 691,
-  "count" : 3958,
-  "uniques" : 703,
+  "count" : 3978,
+  "uniques" : 704,
   "views" : [
     {
       "timestamp": "2024-05-30T00:00:00Z",
@@ -67,6 +67,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-06-11T00:00:00Z",
+      "count": 20,
+      "count_minmax": [ 20, 20 ],
+      "count_decinc": [ 0, 20 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
