@@ -1,6 +1,6 @@
 {
-  "count": 62,
-  "uniques": 12,
+  "count": 82,
+  "uniques": 13,
   "views": [
     {
       "timestamp": "2024-05-30T00:00:00Z",
@@ -36,6 +36,11 @@
       "timestamp": "2024-06-10T00:00:00Z",
       "count": 16,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-06-11T00:00:00Z",
+      "count": 20,
+      "uniques": 1
     }
   ]
 }
